# quivrs3

./: Cargo.toml  README.md  minio.sh  pyproject.toml  pyrightconfig.json
python/quivr_s3/: config.py  storage.py
python/tests/: test_upload_multiple.py
src/: lib.rs
